tests/spec/build/snapshots/nested_package_type_qualifier.snap
---
source: tests/spec/build/mod.rs
---
// === core/types/types.go ===
package types

type Item struct {
	Name string
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/core/types"
)

func main() {
	item := types.Item{Name: "test"}
	fmt.Println(item.Name)
}
