tests/spec/build/snapshots/nested_subpackage_type_reference.snap
---
source: tests/spec/build/mod.rs
---
// === lib/mod.go ===
package lib

import "github.com/user/myproject/lib/sub"

type Container struct {
	Items []sub.Item
}

func FirstItem(c Container) sub.Item {
	return c.Items[0]
}


// === lib/sub/mod.go ===
package sub

type Item struct {
	Name  string
	Score int
}


// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/lib"
	"github.com/user/myproject/lib/sub"
)

func main() {
	item := sub.Item{
		Name:  "test",
		Score: 42,
	}
	c := lib.Container{Items: []sub.Item{item}}
	fmt.Println(lib.FirstItem(c).Name)
}
