tests/spec/build/snapshots/non_error_err_slot_stays_tagged.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type MyError struct {
	msg string
}

func parse(s string) lisette.Result[int, MyError] {
	if s == "ok" {
		return lisette.MakeResultOk[int, MyError](1)
	}
	return lisette.MakeResultErr[int, MyError](MyError{msg: "bad"})
}

func main() {
	if parse("ok").Tag == lisette.ResultOk {
	}
}
