tests/spec/build/snapshots/non_tail_tuple_branch_widens_temp_to_match_assignment.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"io"
)

type Reader1 struct{}

type Reader2 struct{}

func (r Reader1) Read(_ []uint8) (int, error) {
	return 0, nil
}

func (r Reader2) Read(_ []uint8) (int, error) {
	return 1, nil
}

func pick(flag bool) (io.Reader, int) {
	var result lisette.Tuple2[io.Reader, int]
	if flag {
		tup := lisette.MakeTuple2[Reader1, int](Reader1{}, 1)
		result = lisette.MakeTuple2[io.Reader, int](tup.First, tup.Second)
	} else {
		tup_1 := lisette.MakeTuple2[Reader2, int](Reader2{}, 2)
		result = lisette.MakeTuple2[io.Reader, int](tup_1.First, tup_1.Second)
	}
	tup_2 := result
	return tup_2.First, tup_2.Second
}

func main() {
	pick(true)
}
