tests/spec/build/snapshots/nullable_option_fn_arg_adapts_to_comma_ok_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Lookup(_ int) Face {
	return nil
}

func Resolve[T any, R any](a T, f func(T) (R, bool)) (R, bool) {
	return f(a)
}

func main() {
	cb := Lookup
	Resolve(0, func(arg0 int) (Face, bool) {
		raw := cb(arg0)
		option := lisette.OptionFromNilable[Face](raw, lisette.IsNilInterface(raw))
		if option.Tag == lisette.OptionSome {
			return option.SomeVal, true
		}
		return nil, false
	})
}
