tests/spec/build/snapshots/option_fn_arg_adapts_to_comma_ok_generic_method_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Lookup(_ int) Face {
	return nil
}

type Holder struct {
	N int
}

func Holder_Resolve[R any](self Holder, f func(int) (R, bool)) (R, bool) {
	return f(self.N)
}

func main() {
	cb := Lookup
	ret, ret_1 := Holder_Resolve(Holder{N: 4}, func(arg0 int) (Face, bool) {
		raw := cb(arg0)
		option := lisette.OptionFromNilable[Face](raw, lisette.IsNilInterface(raw))
		if option.Tag == lisette.OptionSome {
			return option.SomeVal, true
		}
		return nil, false
	})
	var rez lisette.Option[Face]
	if ret_1 && !lisette.IsNilInterface(ret) {
		rez = lisette.MakeOptionSome[Face](ret)
	} else {
		rez = lisette.MakeOptionNone[Face]()
	}
	_ = rez
}
