tests/spec/build/snapshots/package_name_go_builtin.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import print_ "github.com/user/myproject/print"

func main() {
	print_.Hello()
}


// === print/mod.go ===
package print_

func Hello() string {
	return "hello"
}
