tests/spec/build/snapshots/package_name_go_keyword.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import t "github.com/user/myproject/type"

func main() {
	t.Foo()
}


// === type/mod.go ===
package type_

func Foo() int {
	return 1
}
